# detr-full-stack

./: .gitignore  Dockerfile.nvidia  README.md  docker-compose.yaml  requirements.txt
detr/: detr.py  detr_models.py  main_gradio.py
infra/: docker-compose.yml
src/backend/: README.md  pyproject.toml
src/backend/backend/: __init__.py  __main__.py  app.py
src/backend/backend/config/: loading.py  model.py
src/backend/backend/core/: coco_classes.py  detr_models.py  exceptions.py  export.py  inference.py  model_enum.py
src/backend/backend/helpers/: image.py
src/backend/backend/models/: export.py  inference.py
src/backend/backend/routers/: export.py  inference.py  model_list.py
src/backend/backend/services/: export.py  inference.py  model_list.py
src/backend/docker/: Dockerfile  docker-compose.yml
src/backend/tests/routers/: test_health.py
src/frontend/: .gitignore  index.html  package.json  tailwind.config.js
src/frontend/docker/: Dockerfile  nginx.conf
src/frontend/public/themes/lara-dark-green/: theme.css
src/frontend/src/: App.tsx
src/frontend/src/api/: apiClient.ts
src/frontend/src/api/export/: export.ts  index.ts  types.ts
src/frontend/src/api/inference/: index.ts  inference.ts  types.ts
src/frontend/src/api/model-list/: index.ts  modeList.ts  (+1 more)
src/frontend/src/components/: ModelDropdown.tsx  SidebarMenu.tsx
src/frontend/src/pages/: Layout.tsx
src/gradio/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/gradio/.github/workflows/: deploy_huggingface.yaml
src/gradio/detr/: __init__.py  detr_models.py  main_gradio.py
(+3 files in other folders)
