[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FAST API web app DETR"
authors = ["giuambro97 <giuambro97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
pyyaml = "^6.0.1"
httpx = "^0.25.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.9.2"
torch = "^2.5.1"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
torchvision = "^0.20.1"
seaborn = "^0.13.2"
onnx = "^1.17.0"
onnxruntime = "^1.19.2"
supervision = "0.21.0"
panopticapi = {git = "https://github.com/cocodataset/panopticapi.git", rev = "7bb4655548f98f3fedc07bf37e9040a992b054b0"}



[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
